--- a/index.html
+++ b/index.html
@@ -1,75 +1,143 @@
-<section id="what-we-do" class="section">
-    <div class="container">
-        <h2 class="fade-in-title">What We Do</h2>
-        <div class="card fade-in-card">
-            <p>Our focus is to pioneer <strong>immunotherapeutic treatments</strong> that restore balance to the immune system. We are driven by science and innovation, and we strive to develop therapies that:</p>
-            <ul class="styled-list">
-                <li><strong>Target specific autoimmune disorders</strong> and cancers linked to immune dysfunction.</li>
-                <li><strong>Preserve the body's natural defenses</strong>, avoiding the common issues of broad immunosuppression that lead to increased risk of infections or other health complications.</li>
-                <li><strong>Provide organ-specific immune regulation</strong>, offering patients more effective, targeted treatment options.</li>
+import React, { useState, useEffect } from 'react';
+import { motion } from 'framer-motion';
+import { DNA } from 'react-loader-spinner';
+
+const KYNLiVWebsite = () => {
+  const [scrollY, setScrollY] = useState(0);
+
+  useEffect(() => {
+    const handleScroll = () => setScrollY(window.scrollY);
+    window.addEventListener('scroll', handleScroll);
+    return () => window.removeEventListener('scroll', handleScroll);
+  }, []);
+
+  const headerVariants = {
+    top: { backgroundColor: 'rgba(45, 27, 78, 0)' },
+    scrolled: { backgroundColor: 'rgba(45, 27, 78, 0.9)' }
+  };
+
+  return (
+    <div className="bg-[#2d1b4e] text-white min-h-screen font-sans">
+      <motion.header
+        className="fixed w-full z-50 transition-colors duration-300"
+        initial="top"
+        animate={scrollY > 50 ? "scrolled" : "top"}
+        variants={headerVariants}
+      >
+        <div className="container mx-auto px-4 py-4 flex justify-between items-center">
+          <motion.div
+            initial={{ x: -50, opacity: 0 }}
+            animate={{ x: 0, opacity: 1 }}
+            transition={{ duration: 0.5 }}
+            className="text-2xl font-bold"
+          >
+            KYNLiV
+          </motion.div>
+          <nav>
+            <ul className="flex space-x-6">
+              {['About Us', 'What We Do', 'Our Mission', 'Team', 'Why KYNLiV'].map((item, index) => (
+                <motion.li
+                  key={item}
+                  initial={{ y: -50, opacity: 0 }}
+                  animate={{ y: 0, opacity: 1 }}
+                  transition={{ duration: 0.5, delay: index * 0.1 }}
+                >
+                  <a href={`#${item.toLowerCase().replace(/\s+/g, '-')}`} className="hover:text-[#b19cd9] transition-colors">
+                    {item}
+                  </a>
+                </motion.li>
+              ))}
             </ul>
-            <p>We are committed to helping people with chronic immune-related diseases live healthier, fuller lives.</p>
+          </nav>
         </div>
+      </motion.header>
+
+      <main>
+        <section id="hero" className="h-screen flex items-center justify-center relative overflow-hidden">
+          <div className="absolute inset-0 bg-gradient-to-r from-[#2d1b4e] to-[#4a2a82]" />
+          <DNA
+            visible={true}
+            height="200"
+            width="200"
+            ariaLabel="dna-loading"
+            wrapperStyle={{}}
+            wrapperClass="dna-wrapper absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 opacity-20"
+          />
+          <div className="container mx-auto px-4 z-10">
+            <motion.h1
+              initial={{ opacity: 0, y: 50 }}
+              animate={{ opacity: 1, y: 0 }}
+              transition={{ duration: 0.8 }}
+              className="text-5xl md:text-7xl font-bold mb-4 leading-tight"
+            >
+              Innovating <span className="text-[#b19cd9]">Immunotherapeutic</span><br />
+              <span className="text-[#b19cd9]">Drug Discovery</span>
+            </motion.h1>
+            <motion.p
+              initial={{ opacity: 0, y: 50 }}
+              animate={{ opacity: 1, y: 0 }}
+              transition={{ duration: 0.8, delay: 0.2 }}
+              className="text-xl md:text-2xl mb-8"
+            >
+              For a healthier future
+            </motion.p>
+          </div>
+        </section>
+
+        {['about-us', 'what-we-do', 'our-mission', 'team', 'why-kynliv'].map((section, index) => (
+          <Section key={section} id={section} index={index} />
+        ))}
+      </main>
     </div>
-</section>
+  );
+};
 
-<section id="why" class="section">
-    <div class="container">
-        <h2 class="fade-in-title">Why KYNLiV?</h2>
-        <div class="card fade-in-card">
-            <p>Autoimmune diseases and cancers present some of the most <strong>complex challenges</strong> in modern medicine, where the immune system mistakenly attacks the body or fails to eliminate harmful cells. While medical advances have been made, there is <strong>no cure</strong> for many autoimmune diseases, and current treatments often rely on suppressing the immune system broadly—leading to severe side effects such as heightened risk of infections and even cancer.</p>
-            <p>At KYNLiV, we recognize the <strong>urgent need for more precise treatments</strong>, and our therapies aim to deliver the precision and effectiveness required to tackle these diseases at their core, <strong>without harmful side effects</strong>.</p>
-        </div>
-    </div>
-</section>
-
-<style>
-    /* Additional Classy Styling */
-    .fade-in-title {
-        font-size: 2.5rem;
-        color: var(--primary-color);
-        opacity: 0;
-        transform: translateY(30px);
-        animation: fadeInUp 1.2s ease forwards;
+const Section = ({ id, index }) => {
+  const content = {
+    'about-us': {
+      title: 'Welcome to KYNLiV INC',
+      content: 'At KYNLiV, we are transforming immunotherapy with advanced treatments targeting autoimmune diseases and cancer. Our therapies selectively reprogram immune responses, protecting overall immune function while delivering precise, organ-specific solutions.'
+    },
+    'what-we-do': {
+      title: 'What We Do',
+      content: 'KYNLiV is pioneering targeted therapies that focus on autoimmune diseases and cancers caused by immune dysfunction, preserve the body\'s natural defenses, and offer organ-specific treatments that enhance patient outcomes and quality of life.'
+    },
+    'our-mission': {
+      title: 'Our Mission',
+      content: 'Our mission is to develop innovative, life-changing therapies that address immune dysfunction at its core. By advancing our proprietary drug candidates through clinical trials, we aim to provide more effective treatments with fewer side effects, ensuring a better future for patients worldwide.'
+    },
+    'team': {
+      title: 'Our Team',
+      content: 'At the core of KYNLiV is a dedicated team of scientific innovators, committed to turning groundbreaking scientific research into tangible medical solutions.'
+    },
+    'why-kynliv': {
+      title: 'Why Choose KYNLiV?',
+      content: 'KYNLiV\'s therapies offer a breakthrough—targeting these diseases precisely without compromising the immune system\'s natural defenses. Our treatments are designed to tackle the root causes of immune dysfunction, offering safer, more effective solutions with fewer side effects.'
     }
+  };
 
-    .fade-in-card {
-        opacity: 0;
-        transform: translateY(30px);
-        animation: fadeInUp 1.2s ease forwards 0.3s;
-    }
+  return (
+    <section id={id} className="py-20 md:py-32">
+      <div className="container mx-auto px-4">
+        <motion.h2
+          initial={{ opacity: 0, y: 50 }}
+          whileInView={{ opacity: 1, y: 0 }}
+          transition={{ duration: 0.8 }}
+          className="text-3xl md:text-5xl font-bold mb-8 text-[#b19cd9]"
+        >
+          {content[id].title}
+        </motion.h2>
+        <motion.p
+          initial={{ opacity: 0, y: 50 }}
+          whileInView={{ opacity: 1, y: 0 }}
+          transition={{ duration: 0.8, delay: 0.2 }}
+          className="text-lg md:text-xl max-w-3xl"
+        >
+          {content[id].content}
+        </motion.p>
+      </div>
+    </section>
+  );
+};
 
-    .styled-list {
-        list-style: none;
-        padding-left: 0;
-        margin-top: 1.5rem;
-    }
-
-    .styled-list li {
-        position: relative;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-        padding-left: 2rem;
-    }
-
-    .styled-list li::before {
-        content: '✔';
-        color: var(--accent-color);
-        font-weight: bold;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
-    /* Fade in effect */
-    @keyframes fadeInUp {
-        from {
-            opacity: 0;
-            transform: translateY(30px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-</style>
+export default KYNLiVWebsite;
